# nebo_cli

./: .gitignore  Cargo.toml  README.md
src/: args.rs  common.rs  configuration.rs  contacts.rs  delete_page.rs  lib.rs  logs.rs  main.rs  share_page.rs  token.rs
src/page/: mod.rs
src/page/aws/: mod.rs  transfer.rs
src/share_page/: aws.rs  mod.rs
src/share_page/aws/: transfer.rs
