[package]
name = "nebo_cli"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nebo_cli"
path = "src/lib.rs"

[[bin]]
name = "nebo_cli"
path = "src/main.rs"

[dependencies]
clap = "2.*"
reqwest = { version = "0.10.*", features = ["blocking", "cookies"] }
lazy_static = "1.4.*"
futures = "0.*"
dialoguer = "0.5.*"
url = "2.*"
chrono = "0.4.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
http = "0.2.*"
rusoto_cognito_identity = "0.42.x"
rusoto_core = "0.42.x"
rusoto_s3 = "0.42.x"
log = "*"
log4rs = "*"
threadpool = "1.7.*"